# clauselocator

./: .flake8  .pre-commit-config.yaml  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/: entrypoint.sh
src/clauses/: apps.py  forms.py  hints.py  urls.py  views.py
src/clauses/logic/: locator.py  utils.py
src/clauses/tests/: test_forms.py
src/core/: settings.py  urls.py  wsgi.py
