[tool.poetry]
name = "clauselocator"
version = "0.1.0"
description = ""
authors = ["Jeremiah Boby <mail@jeremiahboby.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
isort = "^5.8.0"
black = "^20.8b1"
mypy = "^0.812"
django-stubs = "^1.8.0"
ipython = "^7.22.0"
djangorestframework-stubs = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
